--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
+@import 'katex/dist/katex.min.css';
 @import './partials/animations.css';
 @import './partials/blocks.css';
 @import './partials/code.css';
