--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,6 +9,7 @@
 @import './partials/table.css';
 @import './partials/typography.css';
 @import './partials/draggable.css';
+@import './partials/frappe-gantt.css';
 
 @custom-variant dark (&:is(.dark *));
 .bg-\[--color-bg\] {
