--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -155,6 +155,14 @@
     @apply caret-black;
   }
 
+  .comment {
+    @apply bg-yellow-400 border-b-2 border-yellow-200;
+  }
+
+  .comment .comment{
+     @apply bg-yellow-700 border-b-2 border-yellow-400;
+  }
+
   [data-theme='slash-command'] {
     width: 1000vw;
   }
