feat: 🚀 add mention feature with user suggestions and profile popover in editor

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,6 +13,7 @@
 @import './partials/draggable.css';
 @import './partials/frappe-gantt.css';
 @import './partials/youtube.css';
+@import './partials/mention.css';
 
 @custom-variant dark (&:is(.dark *));
 .bg-\[--color-bg\] {
