--- a/src/styles/partials/typography.css
+++ b/src/styles/partials/typography.css
@@ -29,27 +29,33 @@
   }
 
   .ProseMirror h1 {
-    @apply text-3xl font-bold mt-12;
+    @apply font-bold mt-12 mb-6 leading-tight;
+    font-size: 4rem; /* 64px */
   }
 
   .ProseMirror h2 {
-    @apply text-2xl font-bold mt-12;
+    @apply font-bold mt-12 mb-5 leading-tight;
+    font-size: 3.5rem; /* 56px */
   }
 
   .ProseMirror h3 {
-    @apply text-xl font-bold mt-12;
+    @apply font-bold mt-10 mb-4 leading-snug;
+    font-size: 3rem; /* 48px */
   }
 
   .ProseMirror h4 {
-    @apply text-lg font-bold mt-8;
+    @apply font-bold mt-8 mb-3 leading-snug;
+    font-size: 2.5rem; /* 40px */
   }
 
   .ProseMirror h5 {
-    @apply text-base font-bold mt-8;
+    @apply font-bold mt-6 mb-3 leading-normal;
+    font-size: 2rem; /* 32px */
   }
 
   .ProseMirror h6 {
-    @apply text-sm font-bold mt-8;
+    @apply font-bold mt-6 mb-2 leading-normal;
+    font-size: 1.75rem; /* 28px */
   }
 
   .ProseMirror h1:first-child,
