feat(Alert): add alert extension with customizable types and styles

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,6 +16,7 @@
 @import './partials/frappe-gantt.css';
 @import './partials/youtube.css';
 @import './partials/mention.css';
+@import '../extensions/Alert/alert.css';
 
 @custom-variant dark (&:is(.dark *));
 
