feat: 🚀 integrate MathLive editor for enhanced mathematical input functionality

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,6 +12,7 @@
 @import './partials/table.css';
 @import './partials/typography.css';
 @import './partials/math.css';
+@import './partials/mathlive.css';
 @import './partials/draggable.css';
 @import './partials/frappe-gantt.css';
 @import './partials/youtube.css';
