--- a/apps/DocFlow/src/styles/index.css
+++ b/apps/DocFlow/src/styles/index.css
@@ -20,6 +20,7 @@
 @import './partials/mention.css';
 @import './partials/blog.css';
 @import '@syncflow/alert/styles';
+@import '@syncflow/bilibili/styles';
 
 @custom-variant dark (&:is(.dark *));
 
