--- a/apps/DocFlow/src/styles/partials/blocks.css
+++ b/apps/DocFlow/src/styles/partials/blocks.css
@@ -8,22 +8,16 @@
     @apply rounded block w-full;
   }
 
-  /* Block Quote */
-  .ProseMirror figure[data-type='blockquoteFigure'] {
-    @apply my-14 text-black;
+  /* Blockquote */
+  .ProseMirror blockquote {
+    @apply my-6 pl-4 border-l-[3px] border-neutral-300;
   }
 
-  .dark .ProseMirror figure[data-type='blockquoteFigure'] {
-    @apply text-white;
+  .dark .ProseMirror blockquote {
+    @apply border-neutral-600;
   }
 
-  .ProseMirror > blockquote blockquote,
-  .ProseMirror [data-type='blockquoteFigure'] blockquote {
-    @apply m-0;
-  }
-
-  .ProseMirror > blockquote blockquote > *,
-  .ProseMirror [data-type='blockquoteFigure'] blockquote > * {
+  .ProseMirror blockquote > * {
     @apply first:mt-0 last:mb-0;
   }
 
