--- a/apps/DocFlow/src/styles/partials/typography.css
+++ b/apps/DocFlow/src/styles/partials/typography.css
@@ -77,7 +77,7 @@
   }
 
   .ProseMirror a.link {
-    @apply text-blue-500 font-extrabold;
+    @apply text-blue-500 font-extrabold underline;
   }
 
   .dark .ProseMirror a.link {
